tests/baselines/reference/commentOnElidedModule1.errors.txt
a.ts(7,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
a.ts(11,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
b.ts(2,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== b.ts (1 errors) ====
    ///<reference path="a.ts"/>
    module ElidedModule3 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    }
==== a.ts (2 errors) ====
    /*!=================
        Keep this pinned
       =================
    */
    
    /*! Don't keep this pinned comment */
    module ElidedModule {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    }
    
    // Don't keep this comment.
    module ElidedModule2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    }
    